Increased text size on mobile and fixed spacing of links in mobile

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ body {
 
 .nav_item {
     font-family: 'Open Sans', sans serif;
-    font-size: clamp(10px, 1.5vw, 160px);
+    font-size: clamp(14px, 1.5vw, 160px);
     font-weight: 900;
     text-align: center;
     padding: 0.5vh 1.25vw 0.5vh 1.25vw;
@@ -218,14 +218,14 @@ a {
 
 .skills_section p {
     font-family: 'Open Sans', sans serif;
-    font-size: clamp(12px, 1vw, 160px);
+    font-size: clamp(16px, 1vw, 160px);
     color: #F5F5F5;
     margin: 0;
 }
 
 #description {
     font-family: 'Open Sans', sans serif;
-    font-size: clamp(12px, 1.25vw, 100px);
+    font-size: clamp(16px, 1.25vw, 100px);
     font-weight: 400;
     color: #F5F5F5;
     margin: 0;
@@ -278,15 +278,15 @@ a {
 
 .download_btn {
     all: unset;
-    width: 30%;
-    min-width: 100px;
+    width: 40%;
+    min-width: 140px;
     margin: auto;
     padding: 1vw;
-    border-radius: 0.3vw;
+    border-radius: 0.5vw;
     background-color: #45A29F;
     color: #F5F5F5;
     font-family: 'Roboto Condensed', sans serif;
-    font-size: clamp(12px, 1.25vw, 100px);
+    font-size: clamp(16px, 1.25vw, 100px);
     font-weight: 700;
     cursor: pointer;
     box-shadow: #060F0F;
@@ -308,7 +308,7 @@ a {
     flex: 1;
     width: 100%;
     max-width: 48px;
-    min-width: 24px;
+    min-width: 30px;
     height: auto;
     vertical-align: middle;
 }
@@ -412,12 +412,12 @@ a {
     }
     
     .description {
-        font-size: 2.5vw;
+        font-size: 2.75vw;
     }   
 
 
     .project h1 {
-        font-size: 4vw;
+        font-size: 2.5vw;
     }
     
     .project p {
@@ -430,6 +430,10 @@ a {
 
     .project h2 span {
         font-size: 2vw;
+    }
+
+    .links {
+        gap: 4vw;
     }
 }
 
@@ -447,24 +451,24 @@ a {
     }
     
     .description {
-        font-size: 2.5vw;
+        font-size: 3.25vw;
     }   
 
 
     .project h1 {
-        font-size: 5vw;
+        font-size: 6vw;
     }
     
     .project p {
-        font-size: 2.5vw;
+        font-size: 4vw;
     }
     
     .project h2 {
-        font-size: 3vw;
+        font-size: 4vw;
     }
 
     .project h2 span {
-        font-size: 2.5vw;
+        font-size: 4vw;
     }
 }
 
